fixed bug in form and spacing issues in sections

--- a/scss/test-style.scss
+++ b/scss/test-style.scss
@@ -40,7 +40,8 @@ section {
   color: $light;
   font-family: $primary-font;
   font-weight:200;
-  height: 85vh;
+  min-height: 85vh;
+  height: auto;
   
 }
 #profile-pic {
@@ -118,17 +119,17 @@ textarea {
 //tooltips
 
 #home .fa:hover {
-  color: $tertiary-color;
-  content: 'Learn More';
+ 
 }
 #home .fa:hover:after {
     color: $tertiary-color;
   content: 'Learn More';
   position:relative;
   top:1.4em;
-  right: 3em;
+  left: -6em;
   font-family: $primary-font;
   font-style: italic;
   font-weight: 300;
+  font-size: 80%;
 
 }
